# SimpleCV_Examples

./: README.md  camera.cpp  info.txt
Dummy_Recognition/: wall_recognition.cpp
Object_Recognition/: CMakeCache.txt  CMakeLists.txt  Makefile  Segmentation.cpp  bg_sub  bg_sub.cpp  cmake_install.cmake  demo  demo.cpp  octree_change_detection.cpp  pose_est_functions_temp.cpp  tmp.cpp  tmp_eigen.cpp
Object_Recognition/SIFT_Features/: CMakeLists.txt  sift.cpp
Object_Recognition/VFH_Features/: CMakeCache.txt  CMakeLists.txt  Makefile  VFH_Features  cmake_install.cmake
Object_Recognition/VFH_Features/include/: vfh_features.h
Object_Recognition/VFH_Features/src/: main.cpp  vfh_features.cpp
Object_Recognition/background_subtraction/: BackgroundSubtraction  CMakeCache.txt  CMakeLists.txt  Makefile  background_subtraction  cmake_install.cmake
Object_Recognition/background_subtraction/include/: BackgroundSubtraction.h  background_subtraction.h  mat2pcl.h  planarSegmentation.h
Object_Recognition/background_subtraction/src/: BackgroundSubtraction.cpp  background_subtraction.cpp  main.cpp  mat2pcl.cpp  planarSegmentation.cpp
Object_Recognition/my_pcl_tutorial/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  octree_change_detection  octree_change_detection.cpp
Object_Recognition/planar_segmentation_pcl/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  planar_segmentation
Object_Recognition/pose_estimation/: CMakeCache.txt  Makefile  cmake_install.cmake  poseEStimation
Object_Recognition/segmentation/: CMakeCache.txt  CMakeLists.txt  Makefile  Segmentation  Segmentation.cpp  cmake_install.cmake
Object_Recognition/solvePnP/: CMakeLists.txt
myTask1/: infoFile.txt
tmp-camera/: CMakeCache.txt  CMakeLists.txt  Makefile  camera.cpp  cmake_install.cmake  tmp-camera
(+17 files in other folders)
